Refactor hero and background design with logo-based palette and animated pawprints
- Updated variable palette to match Sirko brand colors (deep blue and orange)
- Replaced background and text styles for better contrast and consistency
- Redesigned hero section with dark animated gradient inspired by the logo
- Switched pawprint animation to use optimized SVG icon
- Enhanced pawprint layout with improved timing and positioning
- Removed unused padding/margin styles from base layout

--- a/index.html
+++ b/index.html
@@ -18,10 +18,66 @@
   <div class="container">
     <!-- Анімовані сліди лапок -->
     <div class="paw-container">
-      <span class="paw-print" style="--d:1s;  --x:10%; --y:20%; --r:10deg;  --tx:20px;  --ty:-10px;"></span>
-      <span class="paw-print" style="--d:4s;  --x:70%; --y:30%; --r:-10deg; --tx:-20px; --ty:20px;"></span>
-      <span class="paw-print" style="--d:7s;  --x:30%; --y:60%; --r:5deg;   --tx:15px;  --ty:-15px;"></span>
-      <span class="paw-print" style="--d:10s; --x:80%; --y:80%; --r:-5deg;  --tx:-15px; --ty:15px;"></span>
+      <span class="paw-print"
+            style="
+              --d: 1s;
+              --x: 5%;
+              --y: 25%;
+              --r: -15deg;
+              --tx: 20px;
+              --ty: -10px;
+            ">
+      </span>
+      <span class="paw-print"
+            style="
+              --d: 3.5s;
+              --x: 30%;
+              --y: 15%;
+              --r: 10deg;
+              --tx: -25px;
+              --ty: 15px;
+            ">
+      </span>
+      <span class="paw-print"
+            style="
+              --d: 6s;
+              --x: 55%;
+              --y: 40%;
+              --r: -5deg;
+              --tx: 30px;
+              --ty: -20px;
+            ">
+      </span>
+      <span class="paw-print"
+            style="
+              --d: 8.2s;
+              --x: 75%;
+              --y: 30%;
+              --r: 20deg;
+              --tx: -15px;
+              --ty: 10px;
+            ">
+      </span>
+      <span class="paw-print"
+            style="
+              --d: 10.5s;
+              --x: 20%;
+              --y: 60%;
+              --r: -10deg;
+              --tx: 15px;
+              --ty: -15px;
+            ">
+      </span>
+      <span class="paw-print"
+            style="
+              --d: 13s;
+              --x: 85%;
+              --y: 75%;
+              --r: 5deg;
+              --tx: -20px;
+              --ty: 20px;
+            ">
+      </span>
     </div>
 
     <!-- CTA зона зверху -->
