--- a/index.html
+++ b/index.html
@@ -18,66 +18,12 @@
   <div class="container">
     <!-- Анімовані сліди лапок -->
     <div class="paw-container">
-      <span class="paw-print"
-            style="
-              --d: 1s;
-              --x: 5%;
-              --y: 25%;
-              --r: -15deg;
-              --tx: 20px;
-              --ty: -10px;
-            ">
-      </span>
-      <span class="paw-print"
-            style="
-              --d: 3.5s;
-              --x: 30%;
-              --y: 15%;
-              --r: 10deg;
-              --tx: -25px;
-              --ty: 15px;
-            ">
-      </span>
-      <span class="paw-print"
-            style="
-              --d: 6s;
-              --x: 55%;
-              --y: 40%;
-              --r: -5deg;
-              --tx: 30px;
-              --ty: -20px;
-            ">
-      </span>
-      <span class="paw-print"
-            style="
-              --d: 8.2s;
-              --x: 75%;
-              --y: 30%;
-              --r: 20deg;
-              --tx: -15px;
-              --ty: 10px;
-            ">
-      </span>
-      <span class="paw-print"
-            style="
-              --d: 10.5s;
-              --x: 20%;
-              --y: 60%;
-              --r: -10deg;
-              --tx: 15px;
-              --ty: -15px;
-            ">
-      </span>
-      <span class="paw-print"
-            style="
-              --d: 13s;
-              --x: 85%;
-              --y: 75%;
-              --r: 5deg;
-              --tx: -20px;
-              --ty: 20px;
-            ">
-      </span>
+      <span class="paw-print" style="--d:1s;  --x:5%;  --y:25%; --r:-15deg; --tx:20px; --ty:-10px;"></span>
+      <span class="paw-print" style="--d:3.5s;--x:30%; --y:15%; --r:10deg;  --tx:-25px;--ty:15px;"></span>
+      <span class="paw-print" style="--d:6s;  --x:55%; --y:40%; --r:-5deg;  --tx:30px; --ty:-20px;"></span>
+      <span class="paw-print" style="--d:8.2s;--x:75%; --y:30%; --r:20deg; --tx:-15px;--ty:10px;"></span>
+      <span class="paw-print" style="--d:10.5s;--x:20%; --y:60%; --r:-10deg; --tx:15px; --ty:-15px;"></span>
+      <span class="paw-print" style="--d:13s; --x:85%; --y:75%; --r:5deg;   --tx:-20px;--ty:20px;"></span>
     </div>
 
     <!-- CTA зона зверху -->
@@ -88,10 +34,10 @@
       <button id="go-reports"  class="btn ripple">Звіти</button>
     </section>
 
-    <!-- Hero із логотипом та оновленою анімацією -->
+    <!-- Hero із новим логотипом -->
     <header class="hero reveal delay-2">
       <div class="hero__logo">
-        <img src="images/logo.png" alt="Sirko Club Logo"/>
+        <img src="images/logo.svg" alt="Sirko Club Logo"/>
       </div>
       <h1 class="hero__title">Sirko Club — Собачий адмін</h1>
       <p class="hero__text">Усі інструменти для персоналу та адміністраторів в одному місці.</p>
