Refactor pawprint animation and hero logo rendering
- Cleaned up CSS formatting for .paw-container layout
- Switched to absolute path for paw-print.svg background
- Simplified HTML comments for clarity
- Replaced <object> SVG logo with a single <img> and fallback to PNG using onerror
- Minor adjustments to section headings and visual structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- Анімовані сліди лапок -->
+    <!-- Сліди лапок -->
     <div class="paw-container">
       <span class="paw-print" style="--d:1s;   --x:5%;  --y:25%; --r:-15deg; --tx:20px;  --ty:-10px;"></span>
       <span class="paw-print" style="--d:3.5s; --x:30%; --y:15%; --r:10deg;  --tx:-25px; --ty:15px;"></span>
@@ -26,7 +26,7 @@
       <span class="paw-print" style="--d:13s;  --x:85%; --y:75%; --r:5deg;   --tx:-20px; --ty:20px;"></span>
     </div>
 
-    <!-- CTA зона зверху -->
+    <!-- CTA зона -->
     <section class="cta-top reveal delay-1">
       <button id="go-expenses" class="btn ripple pulse">Форма витрат</button>
       <button id="go-map"      class="btn ripple">Карта клієнта</button>
@@ -34,19 +34,13 @@
       <button id="go-reports"  class="btn ripple">Звіти</button>
     </section>
 
-    <!-- Hero із SVG-лого і PNG-fallback -->
+    <!-- Hero із чистим <img> -->
     <header class="hero reveal delay-2">
       <div class="hero__logo">
-        <object
-          data="/images/logo.svg"
-          type="image/svg+xml"
-          class="logo-svg"
-          onerror="this.style.display='none'">
-        </object>
         <img
-          src="/images/logo.png"
+          src="/images/logo.svg"
           alt="Sirko Club Logo"
-          onerror="this.src='/images/logo-fallback.png'">
+          onerror="this.onerror=null; this.src='/images/logo.png'">
       </div>
       <h1 class="hero__title">Sirko Club — Собачий адмін</h1>
       <p class="hero__text">
@@ -54,7 +48,7 @@
       </p>
     </header>
 
-    <!-- Розділ фіч -->
+    <!-- Фічі адмінки -->
     <section id="map" class="admin-features reveal delay-3">
       <div class="feature">
         <img src="/images/map-icon.png" alt="Карта клієнта"/>
