feat(hero): implement two-column grid layout and refactor logo/content
- Convert header.hero to CSS grid with text and logo columns
- Extract hero content into .hero__content and logo into .hero__image
- Update logo-sketch sizing and add mobile breakpoints
- Refine comments in hero.css and index.html for clarity

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
 
-    <!-- Анімовані сліди лапок -->
+    <!-- Сліди лапок (не змінили) -->
     <div class="paw-container">
       <span class="paw-print" style="--d:1s;   --x:5%;  --y:25%; --r:-15deg; --tx:20px;  --ty:-10px;"></span>
       <span class="paw-print" style="--d:3.5s; --x:30%; --y:15%; --r:10deg;  --tx:-25px; --ty:15px;"></span>
@@ -27,7 +27,7 @@
       <span class="paw-print" style="--d:13s;  --x:85%; --y:75%; --r:5deg;   --tx:-20px; --ty:20px;"></span>
     </div>
 
-    <!-- CTA зона зверху -->
+    <!-- CTA-зона (не змінилась) -->
     <section class="cta-top reveal delay-1">
       <button id="go-expenses" class="btn ripple pulse">Форма витрат</button>
       <button id="go-map"      class="btn ripple">Карта клієнта</button>
@@ -35,21 +35,23 @@
       <button id="go-reports"  class="btn ripple">Звіти</button>
     </section>
 
-    <!-- Hero із новим скетч-лого -->
+    <!-- Hero: логотип праворуч, текст ліворуч -->
     <header class="hero reveal delay-2">
-      <div class="hero__logo">
+      <div class="hero__content">
+        <h1 class="hero__title">Sirko Club — Собачий адмін</h1>
+        <p class="hero__text">
+          Усі інструменти для персоналу та адміністраторів в одному місці.
+        </p>
+      </div>
+      <div class="hero__image">
         <img
           src="/images/logo-sketch.png"
           alt="Sirko Club Logo"
           class="logo-sketch">
       </div>
-      <h1 class="hero__title">Sirko Club — Собачий адмін</h1>
-      <p class="hero__text">
-        Усі інструменти для персоналу та адміністраторів в одному місці.
-      </p>
     </header>
 
-    <!-- Розділ фіч -->
+    <!-- Фічі (не змінились) -->
     <section id="map" class="admin-features reveal delay-3">
       <div class="feature">
         <img src="/images/map-icon.png" alt="Карта клієнта"/>
