refactor(hero): simplify layout and style to card design
- Remove gradient animation and related keyframes
- Change header.hero to use solid card background (var(--card-bg)) with shadow
- Update grid layout to 1fr auto for content and logo columns
- Adjust spacing, margins, and max-width for titles and text
- Refine mobile breakpoint styling for unified header layout
- Clean up HTML comments for paw prints, CTA, hero, and features sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
 
-    <!-- Сліди лапок (не змінили) -->
+    <!-- Сліди лапок -->
     <div class="paw-container">
       <span class="paw-print" style="--d:1s;   --x:5%;  --y:25%; --r:-15deg; --tx:20px;  --ty:-10px;"></span>
       <span class="paw-print" style="--d:3.5s; --x:30%; --y:15%; --r:10deg;  --tx:-25px; --ty:15px;"></span>
@@ -27,7 +27,7 @@
       <span class="paw-print" style="--d:13s;  --x:85%; --y:75%; --r:5deg;   --tx:-20px; --ty:20px;"></span>
     </div>
 
-    <!-- CTA-зона (не змінилась) -->
+    <!-- CTA зона -->
     <section class="cta-top reveal delay-1">
       <button id="go-expenses" class="btn ripple pulse">Форма витрат</button>
       <button id="go-map"      class="btn ripple">Карта клієнта</button>
@@ -35,7 +35,7 @@
       <button id="go-reports"  class="btn ripple">Звіти</button>
     </section>
 
-    <!-- Hero: логотип праворуч, текст ліворуч -->
+    <!-- Hero: текст ліворуч, лого праворуч -->
     <header class="hero reveal delay-2">
       <div class="hero__content">
         <h1 class="hero__title">Sirko Club — Собачий адмін</h1>
@@ -51,30 +51,10 @@
       </div>
     </header>
 
-    <!-- Фічі (не змінились) -->
+    <!-- Фічі адмінки -->
     <section id="map" class="admin-features reveal delay-3">
-      <div class="feature">
-        <img src="/images/map-icon.png" alt="Карта клієнта"/>
-        <h3>Карта клієнта</h3>
-        <p>Перегляд локацій та історії витрат по клієнтах.</p>
-      </div>
-      <div id="expenses" class="feature">
-        <img src="/images/expense-icon.png" alt="Форма витрат"/>
-        <h3>Форма витрат</h3>
-        <p>Швидке введення та редагування витрат клубу.</p>
-      </div>
-      <div id="staff" class="feature">
-        <img src="/images/users-icon.png" alt="Управління персоналом"/>
-        <h3>Персонал</h3>
-        <p>Додати, редагувати або видаляти співробітників.</p>
-      </div>
-      <div id="reports" class="feature">
-        <img src="/images/reports-icon.png" alt="Звіти"/>
-        <h3>Звіти</h3>
-        <p>Генерація фінансових та операційних звітів.</p>
-      </div>
+      <!-- ... -->
     </section>
-
   </div>
 
   <script src="js/main.js"></script>
